base/etc/iptables/iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -s 192.168.0.0/16 --dport 8000 -j ACCEPT
-A TCP -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -o lo -m owner --uid-owner 1100 -j ACCEPT
-A OUTPUT -d 127.0.0.0/24 -m owner --uid-owner 1100 -j ACCEPT
-A OUTPUT -o + -m owner --uid-owner 1100 -j DROP
-A OUTPUT -o lo -m owner --uid-owner 1103 -j ACCEPT
-A OUTPUT -d 127.0.0.0/24 -m owner --uid-owner 1103 -j ACCEPT
-A OUTPUT -o + -m owner --uid-owner 1103 -j DROP
COMMIT
